--- a/19.1 JQuery/index.html
+++ b/19.1 JQuery/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JQuery</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <h1>Click Me</h1>
+    <button>Press Me</button>
+    <button>Press Me</button>
+    <button>Press Me</button>
+    <button>Press Me</button>
+    <button>Press Me</button>
+    <br>
+    <br>
+    <input type="text">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="index.js"></script>
 </body>
